# telegram-sticker-bot

./: .eslintrc  .gitattributes  .gitignore  .prettierrc  Cargo.toml  LICENSE  Procfile  README.md  index.ts  nodemon.json  package.json  tsconfig.json
src/: convert.rs  errors.rs  main.rs  message.rs  types.rs
