[package]
edition = "2021"
name = "telegram-sticker-bot"
version = "1.0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
enum-iterator = "0.7.0"
futures = "0.3.19"
image = "0.24.0"
log = "0.4"
mime = "0.3.16"
pretty_env_logger = "0.4.0"
reqwest = "0.11.9"
teloxide = {version = "0.6.0", features = ["macros", "auto-send"]}
tempfile = "3"
thiserror = "1"
tokio = {version = "1.8", features = ["rt-multi-thread", "macros", "process"]}
tokio-stream = "0.1.8"
ubyte = "0.10.1"
warp = "0.3"
